# $Id$

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-12-17	Konstantin V. Arkhipov

	* 0.8.3 released.

2006-12-02	Konstantin V. Arkhipov

	* meta/types/SmallIntegerType.class.php: arrived from trunk.

2006-11-25	Igor V. Gulyaev

	* meta/builders/BaseBuilder.class.php: do not generate getTable,
	getObjectName, getSequence for abstract DAO's.

2006-11-12	Konstantin V. Arkhipov

	* 0.8.2 released.

2006-11-11	Konstantin V. Arkhipov

	* doc/project.skel/: synced with current onPHP's state.

2006-11-10	Konstantin V. Arkhipov

	* meta/: return type-hints are now generated for every class.

2006-11-09	Konstantin V. Arkhipov

	* meta/types/: float type corrected, double type added.

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.

	* main/Mail/Mail.class.php: fixed from-address encoding's handling.

	* meta/builders/BaseBuilder.class.php: backported fix for non-required
	Ranges generation.

2006-11-05	Konstantin V. Arkhipov

	* 0.8.1 released.

2006-11-02	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: do not interrupt
	so-called 'global transaction', if any; arrived from trunk.

	* core/Form/Primitives/, meta/: backported float-related stuff from
	trunk.

2006-10-31	Nickolay Korolyov

	* core/Form/Primitives/PrimitiveFloat.class.php,
	meta/types/FloatType.class.php: float support in Form and meta;
	arrived from trunk.

2006-10-31	Dmitry E. Demidov

	* main/Utils/TuringTest/TuringImage.class.php: added ability to
	generate IMG_WBMP; backported from trunk.

2006-10-25	Anton E. Lebedevich

	* test/core/LogicTest.class.php: added tests for LogicalExpression.

	* core/Logic/LogicalExpression.class.php,
	core/Logic/Expression.class.php: eqLower fixed for Forms.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.
