@@ -1,5 +1,10 @@
 # $Id$
 
+2006-12-26	Konstantin V. Arkhipov
+
+	* meta/patterns/SpookedEnumerationPattern.class.php: arrived from
+	trunk.
+
 2006-12-20	Konstantin V. Arkhipov
 
 	* main/Flow/RedirectView.class.php: now skips arrays and objects in
